tests/fixtures/invalid/pow_bytes_bool_bool.py
# Cannot call pow() with Bytes, Bool, Bool
x = pow(b"hello", True, True)
